addedEventServiceTests